@@ -1,3 +1,5 @@
+- Fix past, future and range on field search with rails 4, local time was used instead of UTC
+
 = 3.4.33
 - Fix _base_form when used with actions, so :multipart and :persistent can set to false instead of getting them from action config
 - Copy update.columns from create.columns, if not defined
